site: Update index for new book 2022 revision

--- a/index.html
+++ b/index.html
@@ -173,14 +173,12 @@
             Garvin Hicking at s9y.org has been the lead developer since 2003 and published a book about the Serendipity Blog System in 2008.</p>
 
             <p>This book, written in german language, and its rights were given back to the community by the publisher
-            in early 2012. Since then it is <strong>opensource</strong> and was available
-            <a href="https://github.com/s9y/Book/blob/master/serendipity.pdf?raw=true" target="_new">as a PDF</a> build
-            from LaTeX sources and opensourced via <a href="https://github.com/s9y/Book/raw/master/LICENSE" target="_new">GitHub</a>
-            under a <em>CC-BY-NC-SA</em> license.</p>
+            in early 2012. Since then it is <strong>opensource</strong> and was available as a PDF build
+            from LaTeX sources and opensourced via GitHub under a <em>CC-BY-NC-SA</em> license.</p>
 
             <p>The author of this site has spend an awesome amount of time and effort into updating this german
-            documentation for recent Serendipity versions. The here published latest <strong>Serendipity</strong>
-            <a href="/book/">Styx Book</a> <em>“revision”</em> from 2018 is strongly
+            documentation several times for recent Serendipity Styx versions. The here published latest
+            <strong>Serendipity</strong> <a href="/book/">Styx Book</a> <em>“revision”</em> from 2022 is strongly
             brought to your attention.</p>
 
             <hr>
@@ -197,8 +195,8 @@
 
             <h3 id="releases">Releases:</h3>
 
-            <p>Please visit my <a href="https://ophian.github.io/blog">blog</a> on this site, or point yourself to the repository
-            release <a href="https://github.com/ophian/styx/releases">downloads</a>.</p>
+            <p>Please visit my <a href="https://ophian.github.io/blog">Styx release blog</a> on this site, or point yourself
+            to the repository release <a href="https://github.com/ophian/styx/releases">downloads</a>.</p>
 
             <hr>
 
