--- a/about/index.html
+++ b/about/index.html
@@ -126,24 +126,24 @@
             wide and open, and with multi levels of extended properties. I wanted it - to <strong>not</strong> cut off this
             extendibility without real need. Styx is a contributed document of my deep affinity with Serendipity.</p>
 
-            <p>As long as I find the time and the commitment to make this even better, Styx will develop and will include all
-            good parts of the origin Serendipity development. You may replace your origin Serendipity installation without any
-            fear with this extended Edition and you will find everything work as intended. Go and read the <strong>Get Styx</strong>
+            <p>Serendipity Styx has strongly developed and has seen various releases since then. Previously one could say to just drop
+            Styx over an old S9y Origin to run the internal upgrades without fear. But that was years ago and up with Serendipity Styx 3.0
+            in May 2020, easy migrations started to become a little bit more difficult. Go and read the <strong>Get Styx</strong>
             <a href="/hc/en/installation.html#user-content-the-important-upgraders-howto---step-by-step-guide">‘install’ or ‘upgrade’</a>
-            page to see how this can be easily done without too much effort.
+            guide to see how this can be easily done without too much effort.
             Even more you may want to read the <a href="https://github.com/ophian/styx/commits/master">commit history</a> and/or
             the <strong>Styx</strong> <a href="https://github.com/ophian/styx/blob/master/docs/NEWS">ChangeLog</a>.</p>
 
             <p>Since <strong>plugins</strong> are an essential part of Serendipity, this repository holds a strongly maintained
             <a href="https://github.com/ophian/additional_plugins">additional_plugins</a> repository. The <strong>Styx Spartacus</strong>
-            plugin is able to work with it - while Serendipity Origin is not.</p>
+            plugin is able to work with it - while S9y Origin is not.</p>
 
             <p>The Serendipity Styx help documentation is found here at the Styx
             <a href="/hc/">Help Center</a> and the <strong>Frequently Asked Questions</strong>
             <a href="/hc/en/faq/">FAQ</a> page at here. You are requested to read all about
             it there, if the Book has left over some questions, or you need some quick advice.
-            Some important changes between the two Serendipity editions will have to be added to the Styx Wiki or this page sooner or
-            later, I assume, but mostly have already been ported to the <a href="/book/">Styx Book</a>.</p>
+            Important changes between the two Serendipity Editions are marked in the (long) ChangeLog
+            and have been ported to the <a href="/book/">Styx Book</a> already.</p>
 
             <hr>
 
@@ -159,8 +159,8 @@
 
             <h3 id="releases">Releases:</h3>
 
-            <p>Please visit my <a href="https://ophian.github.io/blog">blog</a> on this site, or point yourself to the repository
-            release <a href="https://github.com/ophian/styx/releases">downloads</a>.</p>
+            <p>Please visit my <a href="https://ophian.github.io/blog">Styx release blog</a> on this site, or point yourself
+            to the repository release <a href="https://github.com/ophian/styx/releases">downloads</a>.</p>
 
             <hr>
 
