--- a/features/index.html
+++ b/features/index.html
@@ -306,11 +306,11 @@
     <div class="section-container footer-policy">
         <div class="row">
             <div class="col-xs-12 col-md-6">
-                <p class="footer-policy__rights">© 2016 - 2021 Serendipity Styx Edition.</p>
+                <p class="footer-policy__rights">© 2016 - 2022 Serendipity Styx Edition.</p>
             </div>
             <div class="col-xs-12 col-md-6">
                 <ul class="footer-policy__menu">
-                    <li class="footer-policy__menu-item"><a href="/legal">Legal</a></li>
+                    <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
                     <li class="footer-policy__menu-item"><a href="/legal/privacy">Privacy policy</a></li>
                     <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank" rel="noopener">Open Source</a></li>
                 </ul>
