book: Follow 2k11 to Pure in e7add7ea864bcd89de44a00b2bb5be2cfdd1d83f 00f68ac7296b946c74e7432fde343b56a469016f a49a47d918417355e45efc8b3001a31f6e379127

--- a/book/index.html
+++ b/book/index.html
@@ -4476,8 +4476,8 @@ Man kann Einträge lesen und kommentieren, in älteren
 Archiven stöbern, eine Suche durchführen und auch etliche
 Plugin-Funktionalitäten (Umfrage, Flickr-Fotos ...) ansehen.</p>
 
-<p>Im Folgenden gehen wir von dem lange standardmäßig genutzten Theme (siehe
-Seite <span class="pageref"><a href="#theme">theme</a></span>) <em>2k11</em> aus. Die
+<p>Im Folgenden gehen wir von dem standardmäßig genutzten Theme (siehe
+Seite <span class="pageref"><a href="#theme">theme</a></span>) <em>Pure</em> aus. Die
 meisten anderen Themes richten sich in der Darstellung der Seitenelemente nach
 demselben Schema, können aber in Details davon abweichen. Wie man die
 Darstellung anpassen kann, werden Sie in späteren Kapiteln ab Seite
@@ -4886,9 +4886,10 @@ man zu einer Übersichtsseite mit einer speziellen chronologischen Übersicht.</
 </figure>
 
 <p>Dort werden für alle Jahre, in denen Artikel verfasst wurden, die Monate
-dargestellt. Die Links im default 2k11 Theme <span class="mbold">Monat</span> (ganz anzeigen) und <span class="mbold">Anzahl der Einträge</span> (Überschriften anzeigen) führen hierbei
-wieder zu den eingangs erwähnten Archiv-Übersichtsseiten. Das frühere default Theme bulletproof, visualisiert hier für die Menge der
-Artikel, die in dem jeweiligen Zeitraum verfasst wurden eine Balkengrafik.</p>
+dargestellt. Die Links im Standard Theme Pure <span class="mbold">Monat</span>
+(<em>ganz anzeigen</em>) und <span class="mbold">Anzahl der Einträge</span>
+(<em>Überschriften anzeigen</em>) führen hierbei wieder zu den eingangs erwähnten
+Archiv-Übersichtsseiten.</p>
 
 <p>Auch die URL für die spezielle chronologische Übersicht kann mit
 speziellen Pfadkomponenten eingeschränkt werden - eine Einschränkung
@@ -9707,7 +9708,7 @@ wieder verworfen und vereinfacht. Die mitgelieferten Themes heißen nun einfach
 "Kern Themes"; die per Spartacus hinzugefügten "Verfügbare Themes".</p>
 
 <p>Diese mitgelieferten Kern Themes bestehen zum Teil aus den Standard Themes
-der verschiedenen Jahre und Revisionen, wie das "pure" Theme 2020, das "2k11" aus
+der verschiedenen Jahre und Revisionen, wie das "pure" Theme 2020/22, das "2k11" aus
 2011/13, usw., bis hin zum originären "default" Theme das für die
 Zugriffs-Kaskade in der Datei-/Template-Suche einen besonderen Platz als Endpunkt
 einnimmt. Zum anderen Teil aus möglichen Standard Derivaten (wie "Next"),
@@ -13456,7 +13457,7 @@ der Liste der Variable <code class="nobreak">$serendipity['languages']</code> en
         Wenn eine Template-Datei eines Themes nicht vorhanden ist, wird die Datei
         im Standard-Theme benutzt. Eben jenes Standard-Theme definieren Sie in
         der Variable <code class="nobreak">$serendipity['defaultTemplate']</code> (standardmäßig
-        <code>2k11</code>, <em>2k11</em>).
+        <code>Pure</code>, <em>Pure</em>).
     </span>
 
     <span class="box">
@@ -35167,7 +35168,7 @@ Dateien des Pakets vorhanden sind.</span>
         Diese sind nur für Entwickler gedacht. Wenn Sie als Unkundiger diese
         Templates in Ihrem Blog aktivieren, kann dies zu der genannten
         Fehlermeldung führen. Sie sollten daher ein anderes Template
-        (wie das Serendipity 2k11 Standard-Template) auswählen.
+        (wie das Serendipity Styx Pure Standard-Template) auswählen.
     </span>
 
     <span class="box">
