book: Update revision month

--- a/book/index.html
+++ b/book/index.html
@@ -499,7 +499,7 @@
 
                     <div id="index" class="clearfix">
 
-<h2 class="ref noanli" id="serendipity-styx-3-8-feb-2022"><span class="revision">Serendipity Styx 3.8, Feb 2022</span></h2>
+<h2 class="ref noanli" id="serendipity-styx-3-8-mrz-2022"><span class="revision">Serendipity Styx 3.8, Mrz 2022</span></h2>
 
 <section id="C0" class="chapter">
 <h2 id="prologue">Vorwort<a class="anchorjs-link" href="#prologue" aria-label="Anchor" data-anchorjs-icon=""></a></h2>
