--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
             <h3 id="serendipity-styx---a-reliable-secure--extensible-php-blog-engine">Serendipity Styx - A reliable, secure &amp; extensible PHP blog engine</h3>
 
-            <p><a href="https://s9y.org">Serendipity</a> is a PHP-powered weblog engine which gives the user an easy way to maintain a blog.
+            <p><strong>Serendipity</strong> is a PHP-powered weblog engine which gives the user an easy way to maintain a blog.
             While the default package is designed for the casual blogger, Serendipity offers an expandable framework with the power for
             professional applications. It stands for:</p>
 
