book: Add figcaption option readout to simplelightbox gallery

--- a/book/index.html
+++ b/book/index.html
@@ -57487,5 +57487,5 @@ ist: Fragen Sie ruhig. Niemand beißt die Hand, die uns füttern soll!</p>
 <a href="#" id="toTop" style="display: inline;"><span id="toTopHover"></span>To Top</a>
 
 <script src="/js/styx.min.js"></script>
-<script> new SimpleLightbox('#index a.lightbox[rel="lightbox"]', { fileExt : 'avif|webp' }); </script>
+<script> new SimpleLightbox('#index a.lightbox[rel="lightbox"]', { fileExt : 'avif|webp', captionSelector: 'figcaption', captionType: 'text' }); </script>
 </body></html>
