book: Update 4.6.2 - Spamschutz for moved link

--- a/book/index.html
+++ b/book/index.html
@@ -9545,7 +9545,12 @@ befindet sich für jeden Empfänger die Möglichkeit, einen derart
 in die Konfiguration des <span class="mbold">serendipity_event_spamblock</span>
 Plugins (<span class="pageref"><a href="#serendipity_event_spamblock">Spamschutz</a></span>).
 Bitte lesen Sie dort nach, welche vielfältigen Möglichkeiten des Spamabwehr und der
-Spambehandlung es in Serendipity gibt. Dies Plugin sollte immer aktiviert sein!</p>
+Spambehandlung es in Serendipity gibt. Dieses Plugin sollte <span class="mbold">immer</span> aktiviert sein!</p>
+
+<p>Serendipity Styx hat diesen extra Menüpunkt entfernt, ist er doch als Button
+unter <span class="pageref"><a href="#U461">Kommentare</a></span> und als Plugin Konfigurationseinstellung weiterhin zugänglich;
+also an den Orten die nötig sind um konkrete Einstellungen zur Laufzeit oder
+zur Installation anzupassen.</p>
 
 </section><!-- section.sub end -->
 
