hc::templating: Remove expl function_exists('serendipity_specialchars')

--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -479,7 +479,7 @@ function serendipity_plugin_api_event_hook($event, &amp;$bag, &amp;$eventData, $
             $entry_specific_header_image_key = 'entry_specific_header_image';
 
             // Check what our special key is set to (checks both POST data as well as the actual data)
-            $is_entry_subtitle = (function_exists('serendipity_specialchars') ? serendipity_specialchars(entry_option_get_value($entry_subtitle_key, $eventData)) : htmlspecialchars(entry_option_get_value($entry_subtitle_key, $eventData), ENT_COMPAT, LANG_CHARSET));
+            $is_entry_subtitle = serendipity_specialchars(entry_option_get_value($entry_subtitle_key, $eventData));
             $is_entry_specific_header_image = entry_option_get_value ($entry_specific_header_image_key, $eventData);
 
             // This is the actual HTML output on the backend screen.
