book::CH11.2: Browsers

--- a/book/index.html
+++ b/book/index.html
@@ -57234,9 +57234,9 @@ Sie performance-intensive Dinge über eigenständiges Caching beschleunigen.</p>
 dass diese so wenig wie möglich PHP-Code ausführt. Je größer und komplexer die
 Datei wird, desto länger dauert der Serendipity-Seitenaufruf.</p>
 
-<p>HTML-Code sollte nach XHTML-1.1-Standard entwickelt werden. Zudem sollte ein
-Template in allen gängigen Browsern funktionieren, zumindest in Mozilla Firefox, Google Chrome
-und Microsoft Internet Explorer.</p>
+<p>HTML-Code sollte nach XHTML-1.1-Standard oder HTML5 entwickelt werden. Zudem sollte ein
+Template in allen gängigen Browsern funktionieren, zumindest in Mozilla Firefox, Google Chrome/Chromium Derivaten
+und Apple Safari.</p>
 
 <p>Wenn Ihr Template eigene Sprachkonstanten verwendet, lagern Sie diese bitte in
 <code>lang_XX.inc.php</code>-Dateien aus und liefern auch jeweils die
