book::CH11.2: Improve GIT for Styx

--- a/book/index.html
+++ b/book/index.html
@@ -57149,12 +57149,12 @@ Dinge beachten:</p>
     <h4 class="subarticle" id="sourcecode-verwaltung-nutzen">Sourcecode-Verwaltung nutzen<a class="anchorjs-link" href="#sourcecode-verwaltung-nutzen" aria-label="Anchor" data-anchorjs-icon=""></a></h4>
 </header>
 
-<p>Serendipity wird über öffentlich zugängliche Server gewartet.
-Der gesamte Code liegt seit Herbst 2011 auf Github [*]
+<p>Serendipity Styx wird über öffentlich zugängliche Server gewartet.
+Der gesamte Serendipity Code liegt seit Herbst 2011 auf Github [*]
 <span class="footnote"><i class="fa fa-info-circle"></i>
-<a href="https://github.com/s9y" target="_blank" rel="noopener">https://github.com/s9y</a></span><!-- footnote -->
-und wird zentral dort verwaltet. Sourceforce dient nur noch aus Kompatibilitätsgründen
-als SVN/CSV Verteiler und die Mirrors sind auch nur noch für eventuelle Ausfälle von GitHub relevant.
+<a href="https://github.com/ophian" target="_blank" rel="noopener">https://github.com/ophian</a></span><!-- footnote -->
+und wird zentral dort verwaltet. Eventuelle andere Seiten dienen nur noch aus Kompatibilitätsgründen
+als SVN/CSV Verteiler und auch eventuelle  Mirrors sind nur noch für Ausfälle von GitHub relevant.
 (Siehe <span class="reference">sourcecodeverwaltung</span> auf Seite
 <span class="pageref"><a href="#sourcecodeverwaltung">sourcecodeverwaltung</a></span>).</p>
 
