hc::templating: Use pure as engine example

--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -248,11 +248,11 @@
 
 <ul>
   <li>First, check if the currently set theme (for example “my_custom_theme”) has the file ‘entries.tpl’. If yes: Use that file <code>templates/my_custom_theme/entries.tpl</code>.</li>
-  <li>Now check the theme’s ‘info.txt’ file and see if the theme defined an “Engine: XXX” which specifies the default fallback directory to use. If “Engine: 2k11 would be contained in the file, then <code>templates/2k11/entries.tpl</code> would be returned.</li>
+  <li>Now check the theme’s ‘info.txt’ file and see if the theme defined an “Engine: XXX” which specifies the default fallback directory to use. If “Engine: pure would be contained in the file, then <code>templates/pure/entries.tpl</code> would be returned.</li>
   <li>The next and last iterated theme to be processed as fallback would be “default/” and this file <code>templates/default/entries.tpl</code> be returned.
 </ul>
 
-<p>So for simple extended themes, an “Engine: 2k11” would suffice best!</p>
+<p>So for simple extended themes, an “Engine: pure” would suffice best!</p>
 
 <p>Make sure that you only copy over those files to your theme directory which you are really going to customize!</p>
 
