book: Add symbolic link under windows to deployment

--- a/book/index.html
+++ b/book/index.html
@@ -55927,6 +55927,15 @@ Server/Provider dies nicht unterstützt, müssen Sie das komplette
 entweder symbolisch vom <em>Core</em>-Verzeichnis in das jeweilige
 <em>Deployment</em> verknüpfen oder kopieren.</p>
 
+<p>Unter Linux sind symbolische Links ja etwas quasi Alltägliches. Windows ist hier wählerisch
+und erlaubt dies nur unter erweiterten Berechtigungen mit der Windowns Eingabeaufforderung
+und dem Windows eigenen "mklink" Tool. Ihr Serendipity Kern bzw. Bezugs Verzeichnis liegt
+beispielsweise in <code>C:\xampp\htdocs\bikeshare\styx</code>, und so muss der symbolische Verzeichnis Link folgendermaßen</p>
+<pre>
+mklink /D "C:\xampp\htdocs\bikeshare\ebike\templates" "C:\xampp\htdocs\bikeshare\styx\templates"
+</pre>
+<p>erstellt werden.</p>
+
 </article>
 
 <article id="XU10915" class="subsub">
