book: Fix typo and minors

--- a/book/index.html
+++ b/book/index.html
@@ -1038,8 +1038,8 @@ somit sowohl auf Windows- als auch auf Unix-Derivaten einsetzen.</p>
 
 <p>Mit der Serendipity 1.7.x Serie stieg die interne Voraussetzung auf PHP 5.2 und mit dem
 Erscheinen von Serendipity 2.1 auf mindestens PHP 5.3, besser min 5.4+. Die letzte aktuelle
-Version der 2er Serie, Serendipity Styx 2.9.5 vom 2. Mai 2020, hat bereits PHP 5.6 als
-minimale Vorraussetzung. Heutzutage ist eher mindestens PHP 7.4+ Voraussetzung, um in den erweiterten
+Version der Styx 2er Serie, Serendipity Styx 2.9.5 vom 2. Mai 2020, hatte bereits PHP 5.6 als
+minimale Voraussetzung. Heutzutage ist mindestens PHP 7.4+ Voraussetzung, um in den erweiterten
 Genuss der sprachlichen Modellpflege außerhalb gravierender Sicherheitsfixes zu kommen.
 Vor allen Dingen, weil der Support für alle alten Versionen abgelaufen ist und die Supportzeiten
 immer kürzer wurden. Wie früher, lange Jahre auf alten PHP Versionen zu hocken kann schwerwiegende
@@ -1048,9 +1048,10 @@ Sicherheitslücken eröffnen. Treten Sie ihren Providern also auf die Füße!</p
 <p>Damit Serendipity auf dem eigenen Webserver laufen kann, muss man einige
 PHP-Einstellungen berücksichtigen. Üblicherweise sind sie passend
 konfiguriert, so dass Sie als unbedarfter Benutzer direkt zum Kapitel
-<span class="reference">Installation</span> ab Seite <span class="pageref"><a href="#installation">Installation</a></span> springen können, wenn
-Sie Ihren Webserver nicht selbst aufsetzen und dem Techniker bei Ihrem
-Provider keine Hinweise geben müssen.</p>
+<span class="reference">Installation</span> ab Seite
+<span class="pageref"><a href="#Installation">Installation</a></span>
+springen können, wenn Sie Ihren Webserver nicht selbst aufsetzen und
+dem Techniker bei Ihrem Provider keine Hinweise geben müssen.</p>
 
 <section id="U131" class="sub">
 <span class="u-toc">1.3.1 - Systemseitige Einstellungen</span>
