book: Improve 1.3 - Voraussetzungen for openssl version

--- a/book/index.html
+++ b/book/index.html
@@ -1212,6 +1212,13 @@ Serendipity:</p>
             können (und beispielsweise Trackbacks zu solchen geschützten URLs senden
             können), wird das PHP-Modul <code>openssl</code> benötigt.
         </span>
+
+        <span class="box">
+            Ebenso wichtig ist, dass Ihr Serversystem mindestens <code>openSSL</code> ab
+            Version 1.1.1d (Debian Buster) einsetzt, damit keine Kompromisse bei der
+            Verschlüsselungsstärke für "langlebig" gespeicherte Auto-Logins (siehe Wartung)
+            gemacht werden müssen.
+        </span>
     </li>
 
     <li>
