--- a/book/index.html
+++ b/book/index.html
@@ -1817,7 +1817,6 @@ RewriteBase&nbsp;/serendipity/<br>
 RewriteRule&nbsp;^((id/([0-9]+))/?)&nbsp;index.php?/$1&nbsp;[NC,L,QSA]<br>
 RewriteRule&nbsp;^(authors/([0-9]+)\-[0-9a-z\.\_!;,\+\-\%]+)&nbsp;index.php?/$1&nbsp;[NC,L,QSA]<br>
 ...<br>
-RewriteRule&nbsp;^htmlarea/(.*)&nbsp;htmlarea/$1&nbsp;[L,QSA]<br>
 RewriteRule&nbsp;(.*.html?)&nbsp;index.php?url=/$1&nbsp;[L,QSA]<br>
 <br>
 &lt;Files&nbsp;*.tpl.php&gt;<br>
@@ -38254,9 +38253,7 @@ jedem Serendipity Upgrade.</span>
     <span class="inline-tag">Template-Dateien!wysiwyg-style.css</span>
 </span>
 <code class="item file">wysiwyg-style.css</code>
-<span class="desc-info">Enthält CSS-Regeln für den integrierten WYSIWYG-Editor von Serendipity.
-Diese liegt normalerweise in dem <code class="item dir">/htmlarea</code> Ordner, kann aber
-in das Template/Theme kopiert werden (siehe Regeln für ein eigenes Ckeditor-Wysiwyg-Widget).</span>
+<span class="desc-info">Enthält CSS-Regeln für den integrierten WYSIWYG-Editor von Serendipity.</span>
 </p>
 
 </section><!-- section.sub end -->
@@ -48553,18 +48550,6 @@ Plugin aufzurufen.</p>
 
 <p class="desc">
 <span class="item">Verzeichnis </span>
-<code class="item dir">htmlarea</code>
-<span class="desc-info">
-    <span class="box">
-        Enthält den Sourcecode des <code>CKEditor</code>-WYSIWYG-Editors zur
-        Darstellung einer Office-ähnlichen Oberfläche beim
-        Bearbeiten von Artikeln (siehe Seite <span class="pageref"><a href="#wysiwyg">WYSIWYG</a></span>).
-    </span>
-</span>
-</p>
-
-<p class="desc">
-<span class="item">Verzeichnis </span>
 <code class="item dir">include</code>
 <span class="desc-info">
     <span class="box">
@@ -48751,6 +48736,23 @@ Plugin aufzurufen.</p>
         sollten daher bei jeder Serendipity-Installation beibehalten und stets aktualisiert
         werden. Änderungen an diesen Dateien sollten Sie niemals dort vornehmen, sondern
         stattdessen nur in einer lokalen Kopie eines eigenen Template-Verzeichnisses.
+    </span>
+</span>
+</p>
+
+<p class="desc">
+<span class="item">Verzeichnis </span>
+<code class="item dir">templates/_assets</code>
+<span class="desc-info">
+    <span class="box">
+        Enthält unter <code>/ckebasic</code> den Sourcecode des einfachen <code>CKEditor</code>-WYSIWYG-Editors zur
+        Darstellung einer Office-ähnlichen Oberfläche beim
+        Bearbeiten von Artikeln (siehe Seite <span class="pageref"><a href="#wysiwyg">WYSIWYG</a></span>), sowie unter
+        <code>/highlight</code> das Asset für kolorierten Code vom codesnippet Plugin des Rich Text Editors.
+    </span>
+
+    <span class="box">
+        Enthält unter <code>/b4</code> und <code>/b5</code> die CSS und JS includes für verschiedene Versionen des beliebten Bootstrap HTML Framework.
     </span>
 </span>
 </p>
