book: Fix typo in deployments

--- a/book/index.html
+++ b/book/index.html
@@ -55970,7 +55970,7 @@ werden. Rufen Sie dazu die URL wie
 Sie dem Serendipity-Installationsprozess. Dabei wird eine eigenständige
 Konfigurationsdatei im <em>Deployment</em>-Verzeichnis und eine
 eigenständige Datenbank erstellt. Falls Sie alle Deployments in eine einzelne
-Datenbank installieren, sollten Sie die <em>Forgeschrittene Installation</em>
+Datenbank installieren, sollten Sie unbedingt die <em>Fortgeschrittene Installation</em>
 wählen und unterschiedliche Tabellenpräfixe nutzen.</p>
 
 <p>Wenn Sie zusätzliche Demo-Inhalte in ein Deployment einstellen wollen, können
