book: Fix Typo in deployments

--- a/book/index.html
+++ b/book/index.html
@@ -55975,7 +55975,7 @@ wählen und unterschiedliche Tabellenpräfixe nutzen.</p>
 
 <p>Wenn Sie zusätzliche Demo-Inhalte in ein Deployment einstellen wollen, können
 Sie eine Datei <code>sql/preload.sql</code> mit entsprechenden SQL-Anweisungen füllen.
-Wenn Ihr Deployments über die Standardsettings von Serendipity hinaus bestimmte
+Wenn Ihre Deployments über die Standardsettings von Serendipity hinaus bestimmte
 Plugins vorinstallieren sollen, können Sie eine Datei <code>plugins/preload.txt</code>
 mit den Namen der Plugin-Klassen (zB. <code>serendipity_event_autoupdate</code>) füllen.
 Trennen Sie mehrere Plugins mit einem Zeilenumbruch voneinander. Nach jedem
