book: Add necessary plugins dir to deployments

--- a/book/index.html
+++ b/book/index.html
@@ -55933,6 +55933,12 @@ es am besten, dieses Verzeichnis symbolisch zu verlinken. Wenn Ihr
 Server/Provider dies nicht unterstützt, müssen Sie das komplette
 <code>plugins</code>-Verzeichnis einfach kopieren.</p>
 
+<p>Andererseits geben Sie dem Deployment einfach ein leeres und beschreibbares
+<code>plugins</code> Verzeichnis, analog zu den drei bereits genannten, damit
+dort über Spartacus remote installierte Plugin-Programme hinein installiert werden
+können. Die Kern Plugins liegen im Kern <code>styx</code> Verzeichnis, während die
+"auswärtig" geholten Plugins eines jeden Deployments im eigenen Deployment Ordner liegen.</p>
+
 <p>Dasselbe gilt für das Verzeichnis <code>templates</code>. Dieses müssen Sie auch
 entweder symbolisch vom <em>Core</em>-Verzeichnis in das jeweilige
 <em>Deployment</em> verknüpfen oder kopieren.</p>
@@ -56004,9 +56010,8 @@ das autoupdate Plugin als Beispiel) bereits lokal im Kern Plugin-Verzeichnis vor
 Konfigurationsdateien unabhängig voneinander. Über die jeweilige
 <code>serendipity_admin.php</code>-URL können diese Deployments verwaltet werden.</p>
 
-
 <p>Übrigens können Sie mehrere bestehende <em>normale</em> Serendipity-Blogs auf
-einem Server auch mit geringfügigem Aufwand in <em>Shared Installations</em> umwandeln.</p>
+einem Server mit geringfügigem Aufwand auch in <em>Shared Installations</em> umwandeln.</p>
 
 <p>Dazu müssen Sie wie oben beschrieben ein Zentralverzeichnis einrichten.
 Ersetzen Sie die bestehenden PHP-Dateien der bereits bestehenden
